tests/baselines/reference/restElementWithAssignmentPattern4.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern4.ts(3,10): error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
  Type '数字' is not assignable to type '文字'.
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern4.ts(3,18): error TS2459: Type '(文字 | 数字)[]' has no property 'b' and no string index signature.


==== tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern4.ts (2 errors) ====
    var a: string, b: number;
    var tuple: [string, number] = ["", 1];
    [...{ 0: a = "", b }] = tuple;
             ~
!!! error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.
                     ~
!!! error TS2459: Type '(文字 | 数字)[]' has no property 'b' and no string index signature.